# Graddnodi

./: .env  .gitignore  Pipfile  README.md  Style.sty  Untitled.ipynb  graddnodi  graph_config.toml  graph_config.toml.bak  justfile  main.py  makefile  pyproject.toml  requirements.txt  requirements_dev.txt  senseurcity.toml  senseurcity.toml.2  test.py
Output/Bushy Park/Results/: summary_graphs.json
Settings/: bushypark.toml  config.json  config.toml  cranfield.toml  influx.json  make_senseurcity_toml.py  senseurcity.toml  senseurcity.toml.jinja  senseurcity_cutoffs.json  style.mplstyle
img/: .$Flowchart.drawio.bkp  Flowchart.drawio
modules/: calibration.py  errors.py  figures.py  grapher.py  idriskit.py  idristools.py  influxquery.py  report.py  results.py  summary.py
notebooks/: Untitled.ipynb  dash.ipynb
src/: main.py
src/graddnodi/: app.py  graddnodi.py  grapher.py  pipeline_dashboard.py  summary_dashboard.py
src/modules/: calibration.py  grapher.py  idristools.py  influxquery.py  report.py  results.py  summary.py
